--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    font-size: 1.2em;
+    font-size: 20px;
     background-color: rgb(71, 52, 52);
     height: 5vh;
 }
