--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@ header div a {
    text-decoration: none;
    color: white;
 }
+@media (width: 740px)
+{
+    header
+    {
+        background-color: red;
+    }
+}
