--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header div a {
    text-decoration: none;
    color: white;
 }
-@media (width: 740px)
+@media (max-width: 740px)
 {
     header
     {
